Next release
============

Bug Fixes
---------

- Restored missing entry point declaration for bfg_alchemy paster template, which was accidentally removed in 0.9.

Documentation
-------------

- Fix a reference to ``wsgiapp`` in the ``wsgiapp2`` API documentation
  within the ``repoze.bfg.wsgi`` module.

0.9 (2009-06-01)
================

Bug Fixes
---------

- It was not possible to register a custom ``IRoutesContextFactory``
  for use as a default context factory as documented in the "Hooks"
  chapter.

Features
--------

- The ``request_type`` argument of ZCML ``view`` declarations and
  ``bfg_view`` decorators can now be one of the strings ``GET``,
  ``POST``, ``PUT``, ``DELETE``, or ``HEAD`` instead of a reference to
  the respective interface type imported from
  ``repoze.bfg.interfaces``.

- The ``route`` ZCML directive now accepts ``request_type`` as an
  alias for its ``condition_method`` argument for symmetry with the
  ``view`` directive.

- The ``bfg_routesalchemy`` paster template now provides a unit test
  and actually uses the database during a view rendering.

Removals
--------

- Remove ``repoze.bfg.threadlocal.setManager``.  It was only used in
  unit tests.

- Remove ``repoze.bfg.wsgi.HTTPException``,
  ``repoze.bfg.wsgi.NotFound``, and ``repoze.bfg.wsgi.Unauthorized``.
  These classes were disused with the introduction of the
  ``IUnauthorizedView`` and ``INotFoundView`` machinery.

Documentation
-------------

- Add description to narrative templating chapter about how to use
  Chameleon text templates.

- Changed Views narrative chapter to use method strings rather than
  interface types, and moved advanced interface type usage to Events
  narrative chapter.

- Added a Routes+SQLAlchemy wiki tutorial.

0.9a8 (2009-05-31)
==================

Features
--------

- It is now possible to register a custom
  ``repoze.bfg.interfaces.INotFoundView`` for a given application.
  This feature replaces the