@@ -1,0 +1,7 @@
+.. _request_module:
+
+:mod:`repoze.bfg.request`
+-------------------------
+
+.. autofunction:: repoze.bfg.request.current_request
+
